--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,11 @@ jobs:
     - name: Instalación de dependencias del cliente
       run: npm install --prefix client
 
-    - name: Construcción de la aplicación
-      run: |
-        npm run build
-        cd client  # O el nombre de tu carpeta de cliente si es diferente
-        npm run build
-        cd ..
+    - name: Construcción del cliente
+      run: npm run build --prefix client
+
+    - name: Despliegue en el servidor
+      run: scp -r ./ user@tu-servidor:/ruta/del/despliegue
+
+    - name: Reinicio del servidor
+      run: ssh user@tu-servidor "pm2 restart chat-juntos"
