--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       run: npm install --prefix client
 
     - name: Construcción del cliente
-      run: npm run build --prefix client
+      run: npm --prefix client install && npm --prefix client run build
 
     - name: Despliegue en el servidor
       run: scp -r ./ user@tu-servidor:/ruta/del/despliegue
