--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://jesusalbarca.github.io/chat-juntos",
   "name": "servidor",
   "version": "1.0.0",
   "description": "",
@@ -8,7 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node servidor/server.js",
     "dev": "nodemon servidor/server.js",
-    "build":"npm run --prefix client build"
+    "build": "npm run --prefix client build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.20.0",
+    "gh-pages": "^6.1.1",
     "google-auth-library": "^8.7.0",
     "morgan": "^1.10.0",
     "socket.io": "^4.6.1"
